--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,16 @@
     <version>1.0</version>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.1.36</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.wnameless.json</groupId>
+            <artifactId>json-flattener</artifactId>
+            <version>0.8.1</version>
+        </dependency>
+    </dependencies>
 </project>
